Latest build of target web.

--- a/knowl/li-20.html
+++ b/knowl/li-20.html
@@ -11,13 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1
-\end{align*}
-</div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-87" class="internal">in-context</a></span>
+<article class="li"><h4 class="heading">
+<span class="type">Item</span><span class="space"> </span><span class="codenumber">1</span><span class="period">.</span>
+</h4>Is the system consistent?</article><span class="incontext"><a href="sec_solving_linear_systems.html#li-20" class="internal">in-context</a></span>
 </body>
 </html>
