--- a/knowl/p-88.html
+++ b/knowl/p-88.html
@@ -11,8 +11,13 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h2 class="heading"><span class="type">Paragraph</span></h2>
-<p>This book was authored in PreTeXt.</p>
-<span class="incontext"><a href="colophon-2.html#p-88" class="internal">in-context</a></span>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{align*}
+3r-5s+t\amp =2\\
+-6r+10s-2t\amp =3
+\end{align*}
+</div>
+<span class="incontext"><a href="sec_solving_linear_systems.html#p-88" class="internal">in-context</a></span>
 </body>
 </html>
