--- a/knowl/p-90.html
+++ b/knowl/p-90.html
@@ -11,13 +11,12 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1
-\end{align*}
-</div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-87" class="internal">in-context</a></span>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Two of the most important questions we will consider this semester are:</p>
+<ol class="decimal">
+<li><p>Is the system consistent?</p></li>
+<li><p>If a solution exists, is the solution unique?</p></li>
+</ol>
+<span class="incontext"><a href="sec_solving_linear_systems.html#p-90" class="internal">in-context</a></span>
 </body>
 </html>
