--- a/knowl/task-34.html
+++ b/knowl/task-34.html
@@ -11,13 +11,14 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
+<article class="task exercise-like"><h5 class="heading">
+<span class="type">Task</span><span class="space"> </span><span class="codenumber">2.6.e</span><span class="period">.</span>
+</h5>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
-7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1
+3r-5s+t\amp =2\\
+-6r+10s-2t\amp =3
 \end{align*}
-</div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-87" class="internal">in-context</a></span>
+</div></article><span class="incontext"><a href="sec_solving_linear_systems.html#task-34" class="internal">in-context</a></span>
 </body>
 </html>
