--- a/sec_proof_practice.html
+++ b/sec_proof_practice.html
@@ -129,7 +129,7 @@ x+1 = (2k+1)+1 = 2k+2 = 2(k+1)\text{.}
 <a href="worksheet-2-a4.html" class="a4">A4</a><a href="worksheet-2-letter.html" class="us">US</a>
 </div>
 </h3>
-<section class="onepage" id="page-3"><article class="activity project-like" id="activity-4"><h4 class="heading">
+<article class="activity project-like" id="activity-4"><h4 class="heading">
 <span class="type">Activity</span><span class="space"> </span><span class="codenumber">1.1</span><span class="period">.</span>
 </h4>Prove the theorem “If <span class="process-math">\(x\)</span> is an odd integer and <span class="process-math">\(y\)</span> is an odd integer, then <span class="process-math">\(xy\)</span> is an odd integer.”<div class="solutions">
 <a href="" data-knowl="" class="id-ref solution-knowl original" data-refid="hk-solution-1" id="solution-1"><span class="type">Solution</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-solution-1"><div class="solution solution-like">
@@ -156,7 +156,7 @@ xy=(2k+1)(2n+1) = 4kn+2k+2n+1 = 2(2kn+k+n)+1\text{.}
 2(m-2)+1\text{.}\)</span> Thus, we have proved that <span class="process-math">\(x+4\)</span> is an odd integer.</p>
 </div></div>
 </div>
-<div class="workspace" data-space="12cm"></div></article></section><section class="onepage" id="page-4"><p id="p-29">Another type of theorem that we are sometimes called upon to prove is a <dfn class="terminology">uniqueness theorem</dfn>. In such a case, we must prove that the thing in question exists as well as prove that there is only one such thing. The next activity walks you through the structure of such an argument.</p>
+<div class="workspace" data-space="12cm"></div></article><p id="p-29">Another type of theorem that we are sometimes called upon to prove is a <dfn class="terminology">uniqueness theorem</dfn>. In such a case, we must prove that the thing in question exists as well as prove that there is only one such thing. The next activity walks you through the structure of such an argument.</p>
 <article class="activity project-like" id="activity-6"><h4 class="heading">
 <span class="type">Activity</span><span class="space"> </span><span class="codenumber">1.3</span><span class="period">.</span>
 </h4>
@@ -166,11 +166,11 @@ r\text{.}\)</span>”</p></div>
 <p id="p-31">The first step in a uniqueness proof is to demonstrate that such a beast exists. One pattern for doing this is by coming up with a formula for the thing (here <span class="process-math">\(x\)</span>) that we need to have exist and showing that <span class="process-math">\(x\)</span> does what it's supposed to. <em class="alert">The process of how you come with the <span class="process-math">\(x\)</span> is scratchwork that doesn't go in the proof!</em>. Thus, we want to start by finding a formula for <span class="process-math">\(x\)</span> so that <span class="process-math">\((ax+1)/(cx) = r\text{.}\)</span> Use familiar algebra skills to do it. What you write up for your proof is going to look like “Let <span class="process-math">\(x=\cdots\text{.}\)</span> Now substituting and simplifying, we see:” starting with <span class="process-math">\((ax+1)/(cx)\)</span> and simplifying to get <span class="process-math">\(r\text{.}\)</span></p>
 <div class="workspace" data-space="5cm"></div></article><article class="task exercise-like" id="task-6"><h5 class="heading"><span class="codenumber">(b)</span></h5>
 <p id="p-32">Next, we have to show that our <span class="process-math">\(x\)</span> is unique. To do so, you assume that <span class="process-math">\(x_1,x_2\in\mathbb{R}\)</span> both have the property required. Namely, that  <span class="process-math">\((ax_1+1)/(cx_1) =
-r\)</span> and <span class="process-math">\((ax_1+1)/(cx_2) =
+r\)</span> and <span class="process-math">\((ax_2+1)/(cx_2) =
 r\text{.}\)</span> Now you use algebra to show that <span class="process-math">\(x_1=x_2\text{,}\)</span> which means that the <span class="process-math">\(x\)</span> you came up with originally really is unique.</p>
 <div class="workspace" data-space="5cm"></div></article><article class="task exercise-like" id="task-7"><h5 class="heading"><span class="codenumber">(c)</span></h5>
 <p id="p-33">What you have above likely has a lot of scratchwork in it. Rewrite things neatly to have a nice paragraph that proves the theorem.</p>
-<div class="workspace" data-space="5cm"></div></article></article></section><section class="onepage" id="page-5"><article class="activity project-like" id="activity-7"><h4 class="heading">
+<div class="workspace" data-space="5cm"></div></article></article><section class="onepage" id="page-3"><article class="activity project-like" id="activity-7"><h4 class="heading">
 <span class="type">Activity</span><span class="space"> </span><span class="codenumber">1.4</span><span class="period">.</span>
 </h4>
 <div class="introduction" id="introduction-4"><p id="p-34">Pick and choose amongst the following for more practice.</p></div>
