--- a/knowl/exercise-5.html
+++ b/knowl/exercise-5.html
@@ -39,14 +39,10 @@
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
 7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1
-\end{align*}
-</div></article><article class="task exercise-like"><h5 class="heading"><span class="codenumber">(e)</span></h5>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
+8x-2y+3z\amp =1\\
 3r-5s+t\amp =2\\
 -6r+10s-2t\amp =3
 \end{align*}
-</div></article></article><span class="incontext"><a href="sec_solving_linear_systems.html#exercise-4" class="internal">in-context</a></span>
+</div></article></article><span class="incontext"><a href="sec_solving_linear_systems.html#exercise-5" class="internal">in-context</a></span>
 </body>
 </html>
