--- a/knowl/mrow-28.html
+++ b/knowl/mrow-28.html
@@ -14,9 +14,7 @@
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
 7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1\\
-3r-5s+t\amp =2\\
--6r+10s-2t\amp =3
+8x-2y+3z\amp =1
 \end{align*}
 </div>
 <span class="incontext"><a href="sec_solving_linear_systems.html#md-12" class="internal">in-context</a></span>
