--- a/knowl/p-89.html
+++ b/knowl/p-89.html
@@ -11,13 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1
-\end{align*}
-</div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-87" class="internal">in-context</a></span>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Once you have the augmented matrix for a system of linear equations in reduced row-echelon form, how do you use it to determine the solution set for the system? Write a step-by-step procedure that is general enough to be used on any system of linear equations. Be aware of any implicit assumptions you're making (and try to avoid them).</p>
+<span class="incontext"><a href="sec_solving_linear_systems.html#p-89" class="internal">in-context</a></span>
 </body>
 </html>
