--- a/knowl/p-91.html
+++ b/knowl/p-91.html
@@ -11,13 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1
-\end{align*}
-</div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-87" class="internal">in-context</a></span>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Look back at your results so far and try to figure out what properties of the system (or corresponding matrices) will help us answer question 1 and which properties of the system will help us answer question 2. Write a conjecture about each question.</p>
+<span class="incontext"><a href="sec_solving_linear_systems.html#p-91" class="internal">in-context</a></span>
 </body>
 </html>
