--- a/sec_solving_linear_systems.html
+++ b/sec_solving_linear_systems.html
@@ -325,11 +325,26 @@ a_{m1}\amp  a_{m2} \amp  ... \amp   a_{mn} \amp |\amp b_m \end{bmatrix}
 <div class="displaymath process-math" data-contains-math-knowls="" id="md-12">
 \begin{align*}
 7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1\\
+8x-2y+3z\amp =1
+\end{align*}
+</div></article><article class="task exercise-like" id="task-34"><h5 class="heading"><span class="codenumber">(e)</span></h5>
+<div class="displaymath process-math" data-contains-math-knowls="" id="md-13">
+\begin{align*}
 3r-5s+t\amp =2\\
 -6r+10s-2t\amp =3
 \end{align*}
-</div></article></article></section></section></div></main>
+</div></article></article><article class="investigation project-like" id="investigation-3"><h4 class="heading">
+<span class="type">Question</span><span class="space"> </span><span class="codenumber">2.6</span><span class="period">.</span>
+</h4>
+<p id="p-89">Once you have the augmented matrix for a system of linear equations in reduced row-echelon form, how do you use it to determine the solution set for the system? Write a step-by-step procedure that is general enough to be used on any system of linear equations. Be aware of any implicit assumptions you're making (and try to avoid them).</p></article><p id="p-90">Two of the most important questions we will consider this semester are:</p>
+<ol class="decimal">
+<li id="li-20"><p id="p-derived-li-20">Is the system consistent?</p></li>
+<li id="li-21"><p id="p-derived-li-21">If a solution exists, is the solution unique?</p></li>
+</ol>
+<article class="investigation project-like" id="investigation-4"><h4 class="heading">
+<span class="type">Question</span><span class="space"> </span><span class="codenumber">2.7</span><span class="period">.</span>
+</h4>
+<p id="p-91">Look back at your results so far and try to figure out what properties of the system (or corresponding matrices) will help us answer question 1 and which properties of the system will help us answer question 2. Write a conjecture about each question.</p></article></section></section></div></main>
 </div>
 </body>
 </html>
