--- a/meta_frontmatter.html
+++ b/meta_frontmatter.html
@@ -15,7 +15,7 @@
 <meta property="book:title" content="Linear Algebra">
 <meta property="book:author" content="Mitchel T. Keller">
 <meta property="book:author" content="Nicholas Long">
-<script>var runestoneMathReady = new Promise((resolve) => window.rsMathReady = resolve);
+<script src="https://sagecell.sagemath.org/static/embedded_sagecell.js"></script><script>var runestoneMathReady = new Promise((resolve) => window.rsMathReady = resolve);
 window.MathJax = {
   tex: {
     inlineMath: [['\\(','\\)']],
@@ -27,6 +27,19 @@ window.MathJax = {
   options: {
     ignoreHtmlClass: "tex2jax_ignore|ignore-math",
     processHtmlClass: "process-math",
+    renderActions: {
+        findScript: [10, function (doc) {
+            document.querySelectorAll('script[type^="math/tex"]').forEach(function(node) {
+                var display = !!node.type.match(/; *mode=display/);
+                var math = new doc.options.MathItem(node.textContent, doc.inputJax[0], display);
+                var text = document.createTextNode('');
+                node.parentNode.replaceChild(text, node);
+                math.start = {node: text, delim: '', n: 0};
+                math.end = {node: text, delim: '', n: 0};
+                doc.math.push(math);
+            });
+        }, '']
+    },
   },
   chtml: {
     scale: 0.88,
@@ -121,7 +134,7 @@ window.MathJax = {
 <div class="author-name">Nicholas Long</div>
 <div class="author-info">Department of Mathematics and Statistics<br>Stephen F. Austin State University</div>
 </div>
-<div class="date">September 16, 2022</div>
+<div class="date">September 20, 2022</div>
 <nav class="summary-links"><ul>
 <li><a href="colophon-1.html" class="internal"><span class="title">Colophon</span></a></li>
 <li><a href="meta_frontmatter-preface.html" class="internal"><span class="title">Preface</span></a></li>
