Latest build of target web.

--- a/ch_solving_sys.html
+++ b/ch_solving_sys.html
@@ -8,7 +8,7 @@
 <html lang="en-US">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Getting Started</title>
+<title>Solving Systems</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
@@ -83,6 +83,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 \newcommand\Rn{$\mathbb{R}^n$}
 \newcommand\Rm{$\mathbb{R}^m$}
 \newcommand\R{$\mathbb{R}$}
+\newcommand\colvec[1]{\begin{bmatrix}#1\end{bmatrix}}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
@@ -125,14 +126,20 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 </ul>
 </li>
 <li class="link active">
-<a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Getting Started</span></a><ul><li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="internal">Solving Linear Systems</a></li></ul>
+<a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Solving Systems</span></a><ul>
+<li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="internal">Solving Linear Systems</a></li>
+<li><a href="sec_vector_matrix_eqns.html" data-scroll="sec_vector_matrix_eqns" class="internal">Vector and Matrix Equations</a></li>
+</ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
 <main class="main"><div id="content" class="pretext-content"><section class="chapter" id="ch_solving_sys"><h2 class="heading">
-<span class="type">Chapter</span> <span class="codenumber">2</span> <span class="title">Getting Started</span>
+<span class="type">Chapter</span> <span class="codenumber">2</span> <span class="title">Solving Systems</span>
 </h2>
-<nav class="summary-links"><ul><li><a href="sec_solving_linear_systems.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Solving Linear Systems</span></a></li></ul></nav></section></div></main>
+<nav class="summary-links"><ul>
+<li><a href="sec_solving_linear_systems.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Solving Linear Systems</span></a></li>
+<li><a href="sec_vector_matrix_eqns.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Vector and Matrix Equations</span></a></li>
+</ul></nav></section></div></main>
 </div>
 </body>
 </html>
