--- a/meta_frontmatter.html
+++ b/meta_frontmatter.html
@@ -77,6 +77,7 @@ window.MathJax = {
 \newcommand\Rn{$\mathbb{R}^n$}
 \newcommand\Rm{$\mathbb{R}^m$}
 \newcommand\R{$\mathbb{R}$}
+\newcommand\colvec[1]{\begin{bmatrix}#1\end{bmatrix}}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
@@ -119,7 +120,10 @@ window.MathJax = {
 </ul>
 </li>
 <li class="link">
-<a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Getting Started</span></a><ul><li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="internal">Solving Linear Systems</a></li></ul>
+<a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Solving Systems</span></a><ul>
+<li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="internal">Solving Linear Systems</a></li>
+<li><a href="sec_vector_matrix_eqns.html" data-scroll="sec_vector_matrix_eqns" class="internal">Vector and Matrix Equations</a></li>
+</ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
@@ -134,7 +138,7 @@ window.MathJax = {
 <div class="author-name">Nicholas Long</div>
 <div class="author-info">Department of Mathematics and Statistics<br>Stephen F. Austin State University</div>
 </div>
-<div class="date">September 20, 2022</div>
+<div class="date">September 22, 2022</div>
 <nav class="summary-links"><ul>
 <li><a href="colophon-1.html" class="internal"><span class="title">Colophon</span></a></li>
 <li><a href="meta_frontmatter-preface.html" class="internal"><span class="title">Preface</span></a></li>
