--- a/my-great-book.html
+++ b/my-great-book.html
@@ -83,6 +83,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 \newcommand\Rn{$\mathbb{R}^n$}
 \newcommand\Rm{$\mathbb{R}^m$}
 \newcommand\R{$\mathbb{R}$}
+\newcommand\colvec[1]{\begin{bmatrix}#1\end{bmatrix}}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
@@ -125,7 +126,10 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 </ul>
 </li>
 <li class="link">
-<a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Getting Started</span></a><ul><li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="internal">Solving Linear Systems</a></li></ul>
+<a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Solving Systems</span></a><ul>
+<li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="internal">Solving Linear Systems</a></li>
+<li><a href="sec_vector_matrix_eqns.html" data-scroll="sec_vector_matrix_eqns" class="internal">Vector and Matrix Equations</a></li>
+</ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
@@ -133,7 +137,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 <li><a href="meta_frontmatter.html" class="internal"><span class="title">Front Matter</span></a></li>
 <li><a href="ch_starting.html" class="internal"><span class="codenumber">0</span> <span class="title">Getting Started</span></a></li>
 <li><a href="ch_what_is_proof.html" class="internal"><span class="codenumber">1</span> <span class="title">Getting Started</span></a></li>
-<li><a href="ch_solving_sys.html" class="internal"><span class="codenumber">2</span> <span class="title">Getting Started</span></a></li>
+<li><a href="ch_solving_sys.html" class="internal"><span class="codenumber">2</span> <span class="title">Solving Systems</span></a></li>
 </ul></nav></section></div></main>
 </div>
 </body>
