--- a/sec_solving_linear_systems.html
+++ b/sec_solving_linear_systems.html
@@ -83,6 +83,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 \newcommand\Rn{$\mathbb{R}^n$}
 \newcommand\Rm{$\mathbb{R}^m$}
 \newcommand\R{$\mathbb{R}$}
+\newcommand\colvec[1]{\begin{bmatrix}#1\end{bmatrix}}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
@@ -97,10 +98,10 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 </div></div>
 <nav id="primary-navbar" class="navbar"><div class="container">
 <div class="navbar-top-buttons">
-<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="ch_solving_sys.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="ch_solving_sys.html" title="Up">Up</a><span id="nextbutton" class="next-button button toolbar-item disabled">Next</span></span></div>
+<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="ch_solving_sys.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="ch_solving_sys.html" title="Up">Up</a><a id="nextbutton" class="next-button button toolbar-item" href="sec_vector_matrix_eqns.html" title="Next">Next</a></span></div>
 </div>
 <div class="navbar-bottom-buttons toolbar toolbar-divisor-4">
-<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="ch_solving_sys.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="ch_solving_sys.html" title="Up">Up</a><span class="next-button button toolbar-item disabled">Next</span>
+<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="ch_solving_sys.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="ch_solving_sys.html" title="Up">Up</a><a class="next-button button toolbar-item" href="sec_vector_matrix_eqns.html" title="Next">Next</a>
 </div>
 </div></nav></header><div class="page">
 <div id="sidebar-left" class="sidebar" role="navigation"><div class="sidebar-content">
@@ -125,7 +126,10 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 </ul>
 </li>
 <li class="link">
-<a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Getting Started</span></a><ul><li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="active">Solving Linear Systems</a></li></ul>
+<a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Solving Systems</span></a><ul>
+<li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="active">Solving Linear Systems</a></li>
+<li><a href="sec_vector_matrix_eqns.html" data-scroll="sec_vector_matrix_eqns" class="internal">Vector and Matrix Equations</a></li>
+</ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
