Latest build of target web.

--- a/knowl/investigation-18.html
+++ b/knowl/investigation-18.html
@@ -24,8 +24,11 @@ a_{21}\amp  a_{22}\amp  ... \amp   a_{2n} \\
 a_{m1}\amp  a_{m2} \amp  ... \amp   a_{mn}  \end{bmatrix}
 \colvec{x_1\\x_2\\\vdots\\x_n}
 \end{equation*}
-</div></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(b)</span></h4>
-<p>How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the rows of <span class="process-math">\(A\text{?}\)</span></p></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(c)</span></h4>
-<p>How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the column of <span class="process-math">\(A\text{?}\)</span></p></article></article><span class="incontext"><a href="sec_vector_matrix_eqns.html#investigation-18" class="internal">in-context</a></span>
+</div>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-3-hidden.html" title="Solution 2.24.a.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(b)</span></h4>
+<p>How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the rows of <span class="process-math">\(A\text{?}\)</span></p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-4-hidden.html" title="Solution 2.24.b.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><article class="task exercise-like"><h4 class="heading"><span class="codenumber">(c)</span></h4>
+<p>How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the columns of <span class="process-math">\(A\text{?}\)</span></p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-5-hidden.html" title="Solution 2.24.c.1"><span class="type">Solution</span><span class="period">.</span></a></div></article></article><span class="incontext"><a href="sec_vector_matrix_eqns.html#investigation-18" class="internal">in-context</a></span>
 </body>
 </html>
