--- a/knowl/p-128.html
+++ b/knowl/p-128.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Write each of the following as a matrix equation, a vector equation, and system of equations. You need to write out the exact corresponding vector equation, matrix equation, and system of equations, <em class="emphasis">not</em> some equivalent form.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the columns of <span class="process-math">\(A\text{?}\)</span></p>
 <span class="incontext"><a href="sec_vector_matrix_eqns.html#p-128" class="internal">in-context</a></span>
 </body>
 </html>
