--- a/knowl/p-135.html
+++ b/knowl/p-135.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Solve each of the following systems and present your solution set in parametric form.</p>
+<h3 class="heading"><span class="type">Paragraph</span></h3>
+<p>In this section, we will talk about efficient and clear ways to express the set of solutions to a linear system of equations.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-135" class="internal">in-context</a></span>
 </body>
 </html>
