--- a/knowl/p-139.html
+++ b/knowl/p-139.html
@@ -14,8 +14,9 @@
 <h5 class="heading"><span class="type">Paragraph</span></h5>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
-x-11y-2z\amp =0\\
-8x-2y+3z\amp =0
+3x_1-2x_2\amp =0\\
+2x_1-2x_2\amp =0\\
+-x_1+x_2\amp =0
 \end{align*}
 </div>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-139" class="internal">in-context</a></span>
