--- a/knowl/p-144.html
+++ b/knowl/p-144.html
@@ -12,9 +12,9 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>The <dfn class="terminology">column space of a matrix</dfn> <span class="process-math">\(A\text{,}\)</span> denoted <span class="process-math">\(Col(A)\)</span> is the set of vectors that can be written as a linear combination of the columns of <span class="process-math">\(A\text{.}\)</span> If <span class="process-math">\(A\)</span> is <span class="process-math">\(m\)</span> by <span class="process-math">\(n\text{,}\)</span> then <span class="process-math">\(Col(A)=\{\vec{b} \in \mathbb{R}^m \mid
-A\vec{x} =\vec{b} \mbox{ for some } \vec{x} \in \mathbb{R}^n
-\}\text{.}\)</span></p>
+<p>A system of linear equations is <dfn class="terminology">homogeneous</dfn> if the matrix form of the system, <span class="process-math">\(A\vec{x} =\vec{b}\)</span> has <span class="process-math">\(\vec{b}
+=\vec{0}=\colvec{0\\\vdots\\0}\text{.}\)</span> If <span class="process-math">\(\vec{b} \neq
+\vec{0}\text{,}\)</span> then the corresponding system is <dfn class="terminology">nonhomogeneous</dfn>.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-144" class="internal">in-context</a></span>
 </body>
 </html>
