--- a/knowl/p-146.html
+++ b/knowl/p-146.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>Note that this theorem uses the pivot columns of <span class="process-math">\(A\)</span> and <em class="emphasis">not</em> the pivot columns of the <em class="emphasis">echelon form</em> of <span class="process-math">\(A\text{.}\)</span> Even though you need the echelon form to figure out which columns have pivots, you should use the appropriate columns of <span class="process-math">\(A\)</span> in your linear combination.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p><em class="emphasis">State and prove</em> a theorem that describes under what conditions of the matrix <span class="process-math">\(A\)</span> the system <span class="process-math">\(A\vec{x}=\vec{b}\)</span> will have a solution for every <span class="process-math">\(\vec{b}\text{.}\)</span> Essentially, you need to fill in the blank of the following statement: If <span class="fillin underline" role="img" aria-label="40-character blank" style="width: 18.1818181818182em;"></span>, then <span class="process-math">\(A\vec{x}=\vec{b}\)</span> will have a solution for every <span class="process-math">\(\vec{b} \in \mathbb{R}^m\text{.}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-146" class="internal">in-context</a></span>
 </body>
 </html>
