--- a/knowl/p-147.html
+++ b/knowl/p-147.html
@@ -12,7 +12,9 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>The <dfn class="terminology">null space of a matrix</dfn>, denoted <span class="process-math">\(Null(A)\text{,}\)</span> is the set of vectors that when multiplied by the matrix give the zero vector. In other words, <span class="process-math">\(Null(A)\)</span> is the solution set of the homogeneous equation <span class="process-math">\(A\vec{x}=\vec{0}\text{.}\)</span></p>
+<p>The <dfn class="terminology">column space of a matrix</dfn> <span class="process-math">\(A\text{,}\)</span> denoted <span class="process-math">\(Col(A)\)</span> is the set of vectors that can be written as a linear combination of the columns of <span class="process-math">\(A\text{.}\)</span> If <span class="process-math">\(A\)</span> is <span class="process-math">\(m\)</span> by <span class="process-math">\(n\text{,}\)</span> then <span class="process-math">\(Col(A)=\{\vec{b} \in \mathbb{R}^m \mid
+A\vec{x} =\vec{b} \mbox{ for some } \vec{x} \in \mathbb{R}^n
+\}\text{.}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-147" class="internal">in-context</a></span>
 </body>
 </html>
