--- a/knowl/p-149.html
+++ b/knowl/p-149.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Let <span class="process-math">\(A=\begin{bmatrix} 1\amp 2\\ 3\amp 4\\5\amp 6 \end{bmatrix}\text{.}\)</span> Describe the sets <span class="process-math">\(Col(A)\)</span> and <span class="process-math">\(Null(A)\)</span> using a parametric form.</p>
+<h3 class="heading"><span class="type">Paragraph</span></h3>
+<p>Note that this theorem uses the pivot columns of <span class="process-math">\(A\)</span> and <em class="emphasis">not</em> the pivot columns of the <em class="emphasis">echelon form</em> of <span class="process-math">\(A\text{.}\)</span> Even though you need the echelon form to figure out which columns have pivots, you should use the appropriate columns of <span class="process-math">\(A\)</span> in your linear combination.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-149" class="internal">in-context</a></span>
 </body>
 </html>
