--- a/knowl/p-166.html
+++ b/knowl/p-166.html
@@ -11,12 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Write a sentence to explain your answer to each part of the following question. Given a matrix <span class="process-math">\(A\text{,}\)</span> how many vectors will be needed to give the parametric form of</p>
-<ul class="disc">
-<li><p><span class="process-math">\(\displaystyle Col(A)\)</span></p></li>
-<li><p><span class="process-math">\(\displaystyle Null(A)\)</span></p></li>
-</ul>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>What is the minimum number of vectors that will be needed to give the parametric form of <span class="process-math">\(Null(A)\text{?}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-166" class="internal">in-context</a></span>
 </body>
 </html>
