--- a/knowl/solution-4.html
+++ b/knowl/solution-4.html
@@ -11,8 +11,12 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
+<div class="solution solution-like">
+<h4 class="heading">
+<span class="type">Solution</span><span class="space"> </span><span class="codenumber">2.24.b.1</span><span class="period">.</span>
+</h4>
 <p>The <span class="process-math">\(k\)</span>-th component of the matrix-vector product is the dot product of row <span class="process-math">\(k\)</span> of <span class="process-math">\(A\)</span> with <span class="process-math">\(\vec{x}\text{.}\)</span></p>
-<span class="incontext"><a href="sec_vector_matrix_eqns.html#p-127" class="internal">in-context</a></span>
+</div>
+<span class="incontext"><a href="sec_vector_matrix_eqns.html#solution-4" class="internal">in-context</a></span>
 </body>
 </html>
