--- a/knowl/solution-5.html
+++ b/knowl/solution-5.html
@@ -11,8 +11,12 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
+<div class="solution solution-like">
+<h4 class="heading">
+<span class="type">Solution</span><span class="space"> </span><span class="codenumber">2.24.c.1</span><span class="period">.</span>
+</h4>
 <p>One way to view this is as a linear combination of the columns of <span class="process-math">\(A\)</span> with the coefficient on the <span class="process-math">\(k\)</span>-th column of <span class="process-math">\(A\)</span> being <span class="process-math">\(x_k\text{.}\)</span></p>
-<span class="incontext"><a href="sec_vector_matrix_eqns.html#p-129" class="internal">in-context</a></span>
+</div>
+<span class="incontext"><a href="sec_vector_matrix_eqns.html#solution-5" class="internal">in-context</a></span>
 </body>
 </html>
