--- a/sec_vector_matrix_eqns.html
+++ b/sec_vector_matrix_eqns.html
@@ -269,9 +269,18 @@ a_{21}\amp  a_{22}\amp  ... \amp   a_{2n} \\
 a_{m1}\amp  a_{m2} \amp  ... \amp   a_{mn}  \end{bmatrix}
 \colvec{x_1\\x_2\\\vdots\\x_n}
 \end{equation*}
+</div>
+<div class="solutions">
+<a href="" data-knowl="" class="id-ref solution-knowl original" data-refid="hk-solution-3" id="solution-3"><span class="type">Solution</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-solution-3"><div class="solution solution-like"><p id="p-125"><span class="process-math">\(a_{k1}x_1+a_{k2}x_2+\cdots + a_{kn}x_n\)</span></p></div></div>
 </div></article><article class="task exercise-like" id="task-36"><h4 class="heading"><span class="codenumber">(b)</span></h4>
-<p id="p-125">How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the rows of <span class="process-math">\(A\text{?}\)</span></p></article><article class="task exercise-like" id="task-37"><h4 class="heading"><span class="codenumber">(c)</span></h4>
-<p id="p-126">How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the column of <span class="process-math">\(A\text{?}\)</span></p></article></article><p id="p-127">Based on the above definition of the matrix vector product, if</p>
+<p id="p-126">How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the rows of <span class="process-math">\(A\text{?}\)</span></p>
+<div class="solutions">
+<a href="" data-knowl="" class="id-ref solution-knowl original" data-refid="hk-solution-4" id="solution-4"><span class="type">Solution</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-solution-4"><div class="solution solution-like"><p id="p-127">The <span class="process-math">\(k\)</span>-th component of the matrix-vector product is the dot product of row <span class="process-math">\(k\)</span> of <span class="process-math">\(A\)</span> with <span class="process-math">\(\vec{x}\text{.}\)</span></p></div></div>
+</div></article><article class="task exercise-like" id="task-37"><h4 class="heading"><span class="codenumber">(c)</span></h4>
+<p id="p-128">How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the columns of <span class="process-math">\(A\text{?}\)</span></p>
+<div class="solutions">
+<a href="" data-knowl="" class="id-ref solution-knowl original" data-refid="hk-solution-5" id="solution-5"><span class="type">Solution</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-solution-5"><div class="solution solution-like"><p id="p-129">One way to view this is as a linear combination of the columns of <span class="process-math">\(A\)</span> with the coefficient on the <span class="process-math">\(k\)</span>-th column of <span class="process-math">\(A\)</span> being <span class="process-math">\(x_k\text{.}\)</span></p></div></div>
+</div></article></article><p id="p-130">Based on the above definition of the matrix vector product, if</p>
 <div class="displaymath process-math" data-contains-math-knowls="./knowl/q41.html">
 \begin{equation*}
 A=\begin{bmatrix} a_{11} \amp  a_{12} \amp  ... \amp   a_{1n} \\
@@ -294,11 +303,11 @@ a_{m1} x_1  \amp +\amp  a_{m2} x_2 \amp +\amp  ... \amp +\amp   a_{mn}x_n \amp =
 <article class="investigation project-like" id="investigation-19"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">2.25</span><span class="period">.</span>
 </h3>
-<div class="introduction" id="introduction-11"><p id="p-128">Write each of the following as a matrix equation, a vector equation, and system of equations. You need to write out the exact corresponding vector equation, matrix equation, and system of equations, <em class="emphasis">not</em> some equivalent form.</p></div>
+<div class="introduction" id="introduction-11"><p id="p-131">Write each of the following as a matrix equation, a vector equation, and system of equations. You need to write out the exact corresponding vector equation, matrix equation, and system of equations, <em class="emphasis">not</em> some equivalent form.</p></div>
 <article class="task exercise-like" id="task-38"><h4 class="heading"><span class="codenumber">(a)</span></h4>
-<p id="p-129"><span class="process-math">\(\begin{bmatrix} 1 \amp  2\amp  3\\4\amp 5\amp 6\\7\amp 8\amp
+<p id="p-132"><span class="process-math">\(\begin{bmatrix} 1 \amp  2\amp  3\\4\amp 5\amp 6\\7\amp 8\amp
 9 \end{bmatrix} \colvec{x_1\\x_2\\x_3} =\colvec{a\\b\\c}\)</span></p></article><article class="task exercise-like" id="task-39"><h4 class="heading"><span class="codenumber">(b)</span></h4>
-<p id="p-130"><span class="process-math">\(a_1 \colvec{1\\2\\5}+\colvec{3\\0\\-1}+a_2 \colvec{-1\\0\\2}
+<p id="p-133"><span class="process-math">\(a_1 \colvec{1\\2\\5}+\colvec{3\\0\\-1}+a_2 \colvec{-1\\0\\2}
 =\colvec{4\\5\\0}\)</span></p></article><article class="task exercise-like" id="task-40"><h4 class="heading"><span class="codenumber">(c)</span></h4>
 <div class="displaymath process-math" data-contains-math-knowls="" id="md-14">
 \begin{align*}
