--- a/knowl/p-125.html
+++ b/knowl/p-125.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the rows of <span class="process-math">\(A\text{?}\)</span></p>
+<p><span class="process-math">\(a_{k1}x_1+a_{k2}x_2+\cdots + a_{kn}x_n\)</span></p>
 <span class="incontext"><a href="sec_vector_matrix_eqns.html#p-125" class="internal">in-context</a></span>
 </body>
 </html>
