--- a/knowl/p-131.html
+++ b/knowl/p-131.html
@@ -11,14 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-2x_1+3x_2\phantom{+3x_3}\amp =7\\
--x_1+x_2+4x_3\amp =0\\
-5x_1-6x_2-x_3\amp =2
-\end{align*}
-</div>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Write each of the following as a matrix equation, a vector equation, and system of equations. You need to write out the exact corresponding vector equation, matrix equation, and system of equations, <em class="emphasis">not</em> some equivalent form.</p>
 <span class="incontext"><a href="sec_vector_matrix_eqns.html#p-131" class="internal">in-context</a></span>
 </body>
 </html>
