--- a/knowl/p-132.html
+++ b/knowl/p-132.html
@@ -11,8 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>In this section, we will talk about efficient and clear ways to express the set of solutions to a linear system of equations.</p>
-<span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-132" class="internal">in-context</a></span>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p><span class="process-math">\(\begin{bmatrix} 1 \amp  2\amp  3\\4\amp 5\amp 6\\7\amp 8\amp
+9 \end{bmatrix} \colvec{x_1\\x_2\\x_3} =\colvec{a\\b\\c}\)</span></p>
+<span class="incontext"><a href="sec_vector_matrix_eqns.html#p-132" class="internal">in-context</a></span>
 </body>
 </html>
