--- a/knowl/p-133.html
+++ b/knowl/p-133.html
@@ -11,8 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>If a system of linear equations has two distinct solutions, then the system has infinitely many solutions.</p>
-<span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-133" class="internal">in-context</a></span>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p><span class="process-math">\(a_1 \colvec{1\\2\\5}+\colvec{3\\0\\-1}+a_2 \colvec{-1\\0\\2}
+=\colvec{4\\5\\0}\)</span></p>
+<span class="incontext"><a href="sec_vector_matrix_eqns.html#p-133" class="internal">in-context</a></span>
 </body>
 </html>
