--- a/knowl/p-136.html
+++ b/knowl/p-136.html
@@ -11,14 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-3x_1-2x_2\amp =0\\
-2x_1-2x_2\amp =0\\
--x_1+x_2\amp =0
-\end{align*}
-</div>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>If a system of linear equations has two distinct solutions, then the system has infinitely many solutions.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-136" class="internal">in-context</a></span>
 </body>
 </html>
