--- a/knowl/p-138.html
+++ b/knowl/p-138.html
@@ -11,13 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-4x-y+3z\amp =0\\
-3x-y+2z\amp =0
-\end{align*}
-</div>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Solve each of the following systems and present your solution set in parametric form.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-138" class="internal">in-context</a></span>
 </body>
 </html>
