--- a/knowl/p-140.html
+++ b/knowl/p-140.html
@@ -14,8 +14,9 @@
 <h5 class="heading"><span class="type">Paragraph</span></h5>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
-3r-5s+t\amp =0\\
--6r+10s-2t\amp =0
+3x_1-2x_2\amp =0\\
+2x_1-2x_2\amp =0\\
+-x_1+x_2\amp =0
 \end{align*}
 </div>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-140" class="internal">in-context</a></span>
