--- a/knowl/p-141.html
+++ b/knowl/p-141.html
@@ -11,10 +11,13 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>A system of linear equations is <dfn class="terminology">homogeneous</dfn> if the matrix form of the system, <span class="process-math">\(A\vec{x} =\vec{b}\)</span> has <span class="process-math">\(\vec{b}
-=\vec{0}=\colvec{0\\\vdots\\0}\text{.}\)</span> If <span class="process-math">\(\vec{b} \neq
-\vec{0}\text{,}\)</span> then the corresponding system is <dfn class="terminology">nonhomogeneous</dfn>.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{align*}
+4x-y+3z\amp =0\\
+3x-y+2z\amp =0
+\end{align*}
+</div>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-141" class="internal">in-context</a></span>
 </body>
 </html>
