--- a/knowl/p-143.html
+++ b/knowl/p-143.html
@@ -11,8 +11,13 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p><em class="emphasis">State and prove</em> a theorem that describes under what conditions of the matrix <span class="process-math">\(A\)</span> the system <span class="process-math">\(A\vec{x}=\vec{b}\)</span> will have a solution for every <span class="process-math">\(\vec{b}\text{.}\)</span> Essentially, you need to fill in the blank of the following statement: If <span class="fillin underline" role="img" aria-label="40-character blank" style="width: 18.1818181818182em;"></span>, then <span class="process-math">\(A\vec{x}=\vec{b}\)</span> will have a solution for every <span class="process-math">\(\vec{b} \in \mathbb{R}^m\text{.}\)</span></p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{align*}
+3r-5s+t\amp =0\\
+-6r+10s-2t\amp =0
+\end{align*}
+</div>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-143" class="internal">in-context</a></span>
 </body>
 </html>
