--- a/knowl/p-148.html
+++ b/knowl/p-148.html
@@ -12,8 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Let <span class="process-math">\(A=\begin{bmatrix} 1\amp 2\amp 3 \\4\amp
-5\amp 6 \end{bmatrix}\text{.}\)</span> Describe the sets <span class="process-math">\(Col(A)\)</span> and <span class="process-math">\(Null(A)\)</span> using a parametric form.</p>
+<p>The pivot columns of a matrix <span class="process-math">\(A\)</span> generate <span class="process-math">\(Col(A)\text{.}\)</span> This means that if <span class="process-math">\(\vec{v} \in Col(A)\text{,}\)</span> then <span class="process-math">\(\vec{v}\)</span> can be written as a linear combination using only the pivot columns of <span class="process-math">\(A\text{.}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-148" class="internal">in-context</a></span>
 </body>
 </html>
