--- a/knowl/p-150.html
+++ b/knowl/p-150.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>For matrices <span class="process-math">\(A\)</span> and <span class="process-math">\(B\text{,}\)</span> we will use the notation <span class="process-math">\(A\thicksim B\text{,}\)</span> which you produce in <span class="latex-logo">L<span class="A">a</span>T<span class="E">e</span>X</span> using <code class="code-inline tex2jax_ignore">A\thicksim B</code> in math mode, to denote that <span class="process-math">\(B\)</span> can be obtained from <span class="process-math">\(A\)</span> by performing a sequence of row operations.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>The <dfn class="terminology">null space of a matrix</dfn>, denoted <span class="process-math">\(Null(A)\text{,}\)</span> is the set of vectors that when multiplied by the matrix give the zero vector. In other words, <span class="process-math">\(Null(A)\)</span> is the solution set of the homogeneous equation <span class="process-math">\(A\vec{x}=\vec{0}\text{.}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-150" class="internal">in-context</a></span>
 </body>
 </html>
