--- a/knowl/p-151.html
+++ b/knowl/p-151.html
@@ -12,13 +12,8 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Let</p>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{equation*}
-A=\begin{bmatrix} -3\amp 6\amp -1\amp 1\amp -7\amp 0 \\1\amp -2\amp 2\amp 3\amp -1\amp 0 \\2\amp -4\amp 5\amp 8\amp -8\amp 0 \end{bmatrix}  \thicksim \begin{bmatrix} 1\amp -2\amp 0\amp -1\amp 0\amp 0\\0\amp 0\amp 1\amp 2\amp 0\amp 0 \\ 0\amp 0\amp 0\amp 0\amp 1\amp 0 \end{bmatrix}
-\end{equation*}
-</div>
-<p class="continuation">What is the reduced row echelon form of <span class="process-math">\(\begin{bmatrix} -3\amp -1\amp 1 \\1\amp 2\amp 3 \\2\amp 5\amp 8\end{bmatrix}\text{?}\)</span> You should use the information given above and <em class="emphasis">not</em> a lot of calculations.</p>
+<p>Let <span class="process-math">\(A=\begin{bmatrix} 1\amp 2\amp 3 \\4\amp
+5\amp 6 \end{bmatrix}\text{.}\)</span> Describe the sets <span class="process-math">\(Col(A)\)</span> and <span class="process-math">\(Null(A)\)</span> using a parametric form.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-151" class="internal">in-context</a></span>
 </body>
 </html>
