--- a/knowl/p-152.html
+++ b/knowl/p-152.html
@@ -12,13 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Let</p>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{equation*}
-A=\begin{bmatrix} -3\amp 6\amp -1\amp 1\amp -7 \\1\amp -2\amp 2\amp 3\amp -1 \\2\amp -4\amp 5\amp 8\amp -8 \end{bmatrix} \thicksim \begin{bmatrix} 1\amp -2\amp 0\amp -1\amp 0\\0\amp 0\amp 1\amp 2\amp 0 \\ 0\amp 0\amp 0\amp 0\amp 1 \end{bmatrix}
-\end{equation*}
-</div>
-<p class="continuation">Describe <span class="process-math">\(Col(A)\)</span> and <span class="process-math">\(Null(A)\)</span> using a parametric form using as <em class="emphasis">few</em> vectors as possible.</p>
+<p>Let <span class="process-math">\(A=\begin{bmatrix} 1\amp 2\\ 3\amp 4\\5\amp 6 \end{bmatrix}\text{.}\)</span> Describe the sets <span class="process-math">\(Col(A)\)</span> and <span class="process-math">\(Null(A)\)</span> using a parametric form.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-152" class="internal">in-context</a></span>
 </body>
 </html>
