--- a/knowl/p-153.html
+++ b/knowl/p-153.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Under what conditions on a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, <span class="process-math">\(A\text{,}\)</span> will <span class="process-math">\(Col(A)\)</span> be all of <span class="process-math">\(\mathbb{R}^m\text{?}\)</span></p>
+<h3 class="heading"><span class="type">Paragraph</span></h3>
+<p>For matrices <span class="process-math">\(A\)</span> and <span class="process-math">\(B\text{,}\)</span> we will use the notation <span class="process-math">\(A\thicksim B\text{,}\)</span> which you produce in <span class="latex-logo">L<span class="A">a</span>T<span class="E">e</span>X</span> using <code class="code-inline tex2jax_ignore">A\thicksim B</code> in math mode, to denote that <span class="process-math">\(B\)</span> can be obtained from <span class="process-math">\(A\)</span> by performing a sequence of row operations.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-153" class="internal">in-context</a></span>
 </body>
 </html>
