--- a/knowl/p-154.html
+++ b/knowl/p-154.html
@@ -11,8 +11,14 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">Paragraph</span></h3>
-<p>Remember that <span class="process-math">\(Col(A)\)</span> and <span class="process-math">\(Null(A)\)</span> are usually very different sets, in fact, they aren't always in the same parent set. If <span class="process-math">\(A\)</span> is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, then <span class="process-math">\(Col(A)\)</span> is in <span class="process-math">\(\mathbb{R}^{\spadesuit}\)</span> and <span class="process-math">\(Null(A)\)</span> is in <span class="process-math">\(\mathbb{R}^{\clubsuit}\text{,}\)</span> for what values of <span class="process-math">\(\clubsuit\)</span> and <span class="process-math">\(\spadesuit\text{?}\)</span></p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Let</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{equation*}
+A=\begin{bmatrix} -3\amp 6\amp -1\amp 1\amp -7\amp 0 \\1\amp -2\amp 2\amp 3\amp -1\amp 0 \\2\amp -4\amp 5\amp 8\amp -8\amp 0 \end{bmatrix}  \thicksim \begin{bmatrix} 1\amp -2\amp 0\amp -1\amp 0\amp 0\\0\amp 0\amp 1\amp 2\amp 0\amp 0 \\ 0\amp 0\amp 0\amp 0\amp 1\amp 0 \end{bmatrix}
+\end{equation*}
+</div>
+<p class="continuation">What is the reduced row echelon form of <span class="process-math">\(\begin{bmatrix} -3\amp -1\amp 1 \\1\amp 2\amp 3 \\2\amp 5\amp 8\end{bmatrix}\text{?}\)</span> You should use the information given above and <em class="emphasis">not</em> a lot of calculations.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-154" class="internal">in-context</a></span>
 </body>
 </html>
