--- a/knowl/p-155.html
+++ b/knowl/p-155.html
@@ -12,7 +12,13 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Find an example of a <span class="process-math">\(2\)</span> by <span class="process-math">\(2\)</span> matrix where <span class="process-math">\(Col(A)\)</span> is the same set as <span class="process-math">\(Null(A)\text{.}\)</span></p>
+<p>Let</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{equation*}
+A=\begin{bmatrix} -3\amp 6\amp -1\amp 1\amp -7 \\1\amp -2\amp 2\amp 3\amp -1 \\2\amp -4\amp 5\amp 8\amp -8 \end{bmatrix} \thicksim \begin{bmatrix} 1\amp -2\amp 0\amp -1\amp 0\\0\amp 0\amp 1\amp 2\amp 0 \\ 0\amp 0\amp 0\amp 0\amp 1 \end{bmatrix}
+\end{equation*}
+</div>
+<p class="continuation">Describe <span class="process-math">\(Col(A)\)</span> and <span class="process-math">\(Null(A)\)</span> using a parametric form using as <em class="emphasis">few</em> vectors as possible.</p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-155" class="internal">in-context</a></span>
 </body>
 </html>
