--- a/knowl/p-156.html
+++ b/knowl/p-156.html
@@ -12,8 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Given a matrix <span class="process-math">\(A\)</span> with echelon form <span class="process-math">\(\begin{bmatrix} \blacksquare\amp *\amp *\amp *\\0\amp 0\amp
-\blacksquare\amp * \\ 0\amp 0\amp 0\amp 0 \end{bmatrix}\text{:}\)</span></p>
+<p>Under what conditions on a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, <span class="process-math">\(A\text{,}\)</span> will <span class="process-math">\(Col(A)\)</span> be all of <span class="process-math">\(\mathbb{R}^m\text{?}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-156" class="internal">in-context</a></span>
 </body>
 </html>
