--- a/knowl/p-157.html
+++ b/knowl/p-157.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>What is the minimum number of vectors that will be needed to give the parametric form of <span class="process-math">\(Col(A)\text{?}\)</span></p>
+<h3 class="heading"><span class="type">Paragraph</span></h3>
+<p>Remember that <span class="process-math">\(Col(A)\)</span> and <span class="process-math">\(Null(A)\)</span> are usually very different sets, in fact, they aren't always in the same parent set. If <span class="process-math">\(A\)</span> is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix, then <span class="process-math">\(Col(A)\)</span> is in <span class="process-math">\(\mathbb{R}^{\spadesuit}\)</span> and <span class="process-math">\(Null(A)\)</span> is in <span class="process-math">\(\mathbb{R}^{\clubsuit}\text{,}\)</span> for what values of <span class="process-math">\(\clubsuit\)</span> and <span class="process-math">\(\spadesuit\text{?}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-157" class="internal">in-context</a></span>
 </body>
 </html>
