--- a/knowl/p-158.html
+++ b/knowl/p-158.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>What is the minimum number of vectors that will be needed to give the parametric form of <span class="process-math">\(Null(A)\text{?}\)</span></p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Find an example of a <span class="process-math">\(2\)</span> by <span class="process-math">\(2\)</span> matrix where <span class="process-math">\(Col(A)\)</span> is the same set as <span class="process-math">\(Null(A)\text{.}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-158" class="internal">in-context</a></span>
 </body>
 </html>
