--- a/knowl/p-159.html
+++ b/knowl/p-159.html
@@ -11,8 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p><span class="process-math">\(Col(A)\)</span> is a subset of <span class="process-math">\(\mathbb{R}^\spadesuit\)</span> for what value of <span class="process-math">\(\spadesuit\text{?}\)</span></p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Given a matrix <span class="process-math">\(A\)</span> with echelon form <span class="process-math">\(\begin{bmatrix} \blacksquare\amp *\amp *\amp *\\0\amp 0\amp
+\blacksquare\amp * \\ 0\amp 0\amp 0\amp 0 \end{bmatrix}\text{:}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-159" class="internal">in-context</a></span>
 </body>
 </html>
