--- a/knowl/p-161.html
+++ b/knowl/p-161.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Given a matrix <span class="process-math">\(A\)</span> with echelon form <span class="process-math">\(\begin{bmatrix} 0\amp \blacksquare\amp *\amp *\amp *\\0\amp 0\amp 0\amp \blacksquare\amp * \\ 0\amp 0\amp 0\amp 0\amp 0 \end{bmatrix}\text{:}\)</span></p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>What is the minimum number of vectors that will be needed to give the parametric form of <span class="process-math">\(Null(A)\text{?}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-161" class="internal">in-context</a></span>
 </body>
 </html>
