--- a/knowl/p-163.html
+++ b/knowl/p-163.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>What is the minimum number of vectors that will be needed to give the parametric form of <span class="process-math">\(Null(A)\text{?}\)</span></p>
+<p><span class="process-math">\(Null(A)\)</span> is a subset of <span class="process-math">\(\mathbb{R}^\spadesuit\)</span> for what value of <span class="process-math">\(\spadesuit\text{?}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-163" class="internal">in-context</a></span>
 </body>
 </html>
