--- a/knowl/p-167.html
+++ b/knowl/p-167.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Can every vector in <span class="process-math">\(\mathbb{R}^3\)</span> be written as a linear combination of the columns of <span class="process-math">\(A = \begin{bmatrix} 1\amp 5\amp -2\amp 0 \\ -3\amp 1\amp 9\amp -5 \\ 4\amp 8\amp -1\amp 7 \end{bmatrix}\text{?}\)</span> Justify your answer.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p><span class="process-math">\(Col(A)\)</span> is a subset of <span class="process-math">\(\mathbb{R}^\spadesuit\)</span> for what value of <span class="process-math">\(\spadesuit\text{?}\)</span></p>
 <span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-167" class="internal">in-context</a></span>
 </body>
 </html>
