--- a/knowl/p-168.html
+++ b/knowl/p-168.html
@@ -12,13 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-2x_1+3x_2\phantom{+3x_3}\amp =7\\
--x_1+x_2+4x_3\amp =0\\
-5x_1-6x_2-x_3\amp =2
-\end{align*}
-</div>
-<span class="incontext"><a href="sec_vector_matrix_eqns.html#p-134" class="internal">in-context</a></span>
+<p><span class="process-math">\(Null(A)\)</span> is a subset of <span class="process-math">\(\mathbb{R}^\spadesuit\)</span> for what value of <span class="process-math">\(\spadesuit\text{?}\)</span></p>
+<span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-168" class="internal">in-context</a></span>
 </body>
 </html>
