--- a/knowl/p-169.html
+++ b/knowl/p-169.html
@@ -12,7 +12,11 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Given a matrix <span class="process-math">\(A\)</span> with echelon form <span class="process-math">\(\begin{bmatrix} 0\amp \blacksquare\amp *\amp *\amp *\\0\amp 0\amp 0\amp \blacksquare\amp * \\ 0\amp 0\amp 0\amp 0\amp 0 \end{bmatrix}\text{:}\)</span></p>
-<span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-164" class="internal">in-context</a></span>
+<p>Write a sentence to explain your answer to each part of the following question. Given a matrix <span class="process-math">\(A\text{,}\)</span> how many vectors will be needed to give the parametric form of</p>
+<ul class="disc">
+<li><p><span class="process-math">\(\displaystyle Col(A)\)</span></p></li>
+<li><p><span class="process-math">\(\displaystyle Null(A)\)</span></p></li>
+</ul>
+<span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-169" class="internal">in-context</a></span>
 </body>
 </html>
