--- a/knowl/p-170.html
+++ b/knowl/p-170.html
@@ -11,14 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-2x_1+3x_2\phantom{+3x_3}\amp =7\\
--x_1+x_2+4x_3\amp =0\\
-5x_1-6x_2-x_3\amp =2
-\end{align*}
-</div>
-<span class="incontext"><a href="sec_vector_matrix_eqns.html#p-134" class="internal">in-context</a></span>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Can every vector in <span class="process-math">\(\mathbb{R}^3\)</span> be written as a linear combination of the columns of <span class="process-math">\(A = \begin{bmatrix} 1\amp 5\amp -2\amp 0 \\ -3\amp 1\amp 9\amp -5 \\ 4\amp 8\amp -1\amp 7 \end{bmatrix}\text{?}\)</span> Justify your answer.</p>
+<span class="incontext"><a href="sec_soln_sets_lin_eqn.html#p-170" class="internal">in-context</a></span>
 </body>
 </html>
