--- a/knowl/solution-3-hidden.html
+++ b/knowl/solution-3-hidden.html
@@ -10,15 +10,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-2x_1+3x_2\phantom{+3x_3}\amp =7\\
--x_1+x_2+4x_3\amp =0\\
-5x_1-6x_2-x_3\amp =2
-\end{align*}
-</div>
-<span class="incontext"><a href="sec_vector_matrix_eqns.html#p-134" class="internal">in-context</a></span>
-</body>
+<body class="ignore-math"><div class="solution solution-like"><p><span class="process-math">\(a_{k1}x_1+a_{k2}x_2+\cdots + a_{kn}x_n\)</span></p></div></body>
 </html>
