--- a/knowl/task-35.html
+++ b/knowl/task-35.html
@@ -23,6 +23,7 @@ a_{21}\amp  a_{22}\amp  ... \amp   a_{2n} \\
 a_{m1}\amp  a_{m2} \amp  ... \amp   a_{mn}  \end{bmatrix}
 \colvec{x_1\\x_2\\\vdots\\x_n}
 \end{equation*}
-</div></article><span class="incontext"><a href="sec_vector_matrix_eqns.html#task-35" class="internal">in-context</a></span>
+</div>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-3-hidden.html" title="Solution 2.24.a.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><span class="incontext"><a href="sec_vector_matrix_eqns.html#task-35" class="internal">in-context</a></span>
 </body>
 </html>
