--- a/knowl/task-36.html
+++ b/knowl/task-36.html
@@ -14,6 +14,7 @@
 <article class="task exercise-like"><h4 class="heading">
 <span class="type">Task</span><span class="space"> </span><span class="codenumber">2.24.b</span><span class="period">.</span>
 </h4>
-<p>How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the rows of <span class="process-math">\(A\text{?}\)</span></p></article><span class="incontext"><a href="sec_vector_matrix_eqns.html#task-36" class="internal">in-context</a></span>
+<p>How can you express the result of the matrix-vector product in terms of <span class="process-math">\(\vec{x}\)</span> and the rows of <span class="process-math">\(A\text{?}\)</span></p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-4-hidden.html" title="Solution 2.24.b.1"><span class="type">Solution</span><span class="period">.</span></a></div></article><span class="incontext"><a href="sec_vector_matrix_eqns.html#task-36" class="internal">in-context</a></span>
 </body>
 </html>
