Latest build of target web.

--- a/ch_starting.html
+++ b/ch_starting.html
@@ -129,6 +129,9 @@ window.MathJax = {
 <li><a href="sec_matrix_ops.html" data-scroll="sec_matrix_ops" class="internal">Matrix Operations</a></li>
 </ul>
 </li>
+<li class="link">
+<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul><li><a href="section-10.html" data-scroll="section-10" class="internal">Definitions</a></li></ul>
+</li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
 <main class="main"><div id="content" class="pretext-content"><section class="chapter" id="ch_starting"><h2 class="heading">
