--- a/sec_matrix_ops.html
+++ b/sec_matrix_ops.html
@@ -94,10 +94,10 @@ window.MathJax = {
 </div></div>
 <nav id="primary-navbar" class="navbar"><div class="container">
 <div class="navbar-top-buttons">
-<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="sec_soln_sets_lin_eqn.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="ch_solving_sys.html" title="Up">Up</a><span id="nextbutton" class="next-button button toolbar-item disabled">Next</span></span></div>
+<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="sec_soln_sets_lin_eqn.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="ch_solving_sys.html" title="Up">Up</a><a id="nextbutton" class="next-button button toolbar-item" href="ch_vector_spaces.html" title="Next">Next</a></span></div>
 </div>
 <div class="navbar-bottom-buttons toolbar toolbar-divisor-4">
-<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="sec_soln_sets_lin_eqn.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="ch_solving_sys.html" title="Up">Up</a><span class="next-button button toolbar-item disabled">Next</span>
+<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="sec_soln_sets_lin_eqn.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="ch_solving_sys.html" title="Up">Up</a><a class="next-button button toolbar-item" href="ch_vector_spaces.html" title="Next">Next</a>
 </div>
 </div></nav></header><div class="page">
 <div id="sidebar-left" class="sidebar" role="navigation"><div class="sidebar-content">
@@ -128,6 +128,9 @@ window.MathJax = {
 <li><a href="sec_soln_sets_lin_eqn.html" data-scroll="sec_soln_sets_lin_eqn" class="internal">Solution Sets of Linear Systems</a></li>
 <li><a href="sec_matrix_ops.html" data-scroll="sec_matrix_ops" class="active">Matrix Operations</a></li>
 </ul>
+</li>
+<li class="link">
+<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul><li><a href="section-10.html" data-scroll="section-10" class="internal">Definitions</a></li></ul>
 </li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
