--- a/meta_frontmatter.html
+++ b/meta_frontmatter.html
@@ -129,6 +129,9 @@ window.MathJax = {
 <li><a href="sec_matrix_ops.html" data-scroll="sec_matrix_ops" class="internal">Matrix Operations</a></li>
 </ul>
 </li>
+<li class="link">
+<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul><li><a href="section-10.html" data-scroll="section-10" class="internal">Definitions</a></li></ul>
+</li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
 <main class="main"><div id="content" class="pretext-content"><section class="frontmatter" id="meta_frontmatter"><h2 class="heading">
@@ -142,7 +145,7 @@ window.MathJax = {
 <div class="author-name">Nicholas Long</div>
 <div class="author-info">Department of Mathematics and Statistics<br>Stephen F. Austin State University</div>
 </div>
-<div class="date">October 3, 2022</div>
+<div class="date">October 10, 2022</div>
 <nav class="summary-links"><ul>
 <li><a href="colophon-1.html" class="internal"><span class="title">Colophon</span></a></li>
 <li><a href="meta_frontmatter-preface.html" class="internal"><span class="title">Preface</span></a></li>
