--- a/my-great-book.html
+++ b/my-great-book.html
@@ -135,6 +135,9 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 <li><a href="sec_matrix_ops.html" data-scroll="sec_matrix_ops" class="internal">Matrix Operations</a></li>
 </ul>
 </li>
+<li class="link">
+<a href="ch_vector_spaces.html" data-scroll="ch_vector_spaces" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a><ul><li><a href="section-10.html" data-scroll="section-10" class="internal">Definitions</a></li></ul>
+</li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
 <main class="main"><div id="content" class="pretext-content"><section class="book" id="my-great-book"><nav class="summary-links"><ul>
@@ -142,6 +145,7 @@ sagecell.makeSagecell({inputLocation: 'pre.sagecell-sage',
 <li><a href="ch_starting.html" class="internal"><span class="codenumber">0</span> <span class="title">Getting Started</span></a></li>
 <li><a href="ch_what_is_proof.html" class="internal"><span class="codenumber">1</span> <span class="title">Getting Started</span></a></li>
 <li><a href="ch_solving_sys.html" class="internal"><span class="codenumber">2</span> <span class="title">Solving Systems</span></a></li>
+<li><a href="ch_vector_spaces.html" class="internal"><span class="codenumber">3</span> <span class="title">Vector Spaces</span></a></li>
 </ul></nav></section></div></main>
 </div>
 </body>
