Latest build of target web.

--- a/section-11.html
+++ b/section-11.html
@@ -168,7 +168,9 @@ window.MathJax = {
 <p id="p-276">Is the set of points on the plane given by <span class="process-math">\(z=1\)</span> a subspace of <span class="process-math">\(\mathbb{R}^3\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-66"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.13</span><span class="period">.</span>
 </h3>
-<p id="p-277">Draw a plot of the points in <span class="process-math">\(\mathbb{R}^2\)</span> given by <span class="process-math">\(\{ \vec{x}=\colvec{2}{x_1}{x_2} \in \mathbb{R}^2 |x_1 x_2 \geq 0\}\text{.}\)</span> Is <span class="process-math">\(\{ \vec{x}=\colvec{2}{x_1}{x_2} \in \mathbb{R}^2 |x_1 x_2 \geq 0\}\)</span> a subspace of <span class="process-math">\(\mathbb{R}^2\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-67"><h3 class="heading">
+<p id="p-277">Draw a plot of the points in <span class="process-math">\(\mathbb{R}^2\)</span> given by <span class="process-math">\(\{ \vec{x}=\colvec{x_1\\ x_2} \in
+\mathbb{R}^2 \mid x_1 x_2 \geq 0\}\text{.}\)</span> Is <span class="process-math">\(\{ \vec{x}=\colvec{x_1\\
+x_2} \in \mathbb{R}^2 \mid x_1 x_2 \geq 0\}\)</span> a subspace of <span class="process-math">\(\mathbb{R}^2\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-67"><h3 class="heading">
 <span class="type">Question</span><span class="space"> </span><span class="codenumber">3.14</span><span class="period">.</span>
 </h3>
 <p id="p-278">Is <span class="process-math">\(Sym_{n \times n}\text{,}\)</span> the set of symmetric <span class="process-math">\(n\)</span> by <span class="process-math">\(n\)</span> matrices a subspace of <span class="process-math">\(M_{n \times n}\text{?}\)</span> Why or why not?</p></article><article class="investigation project-like" id="investigation-68"><h3 class="heading">
